styles/menu-screen-styles.css
body {
  -ms-overflow-style: none;
  /* Internet Explorer 10+ */
  scrollbar-width: none;
  /* Firefox */
}

body::-webkit-scrollbar {
  display: none;
  /* Safari and Chrome */
}

.menu-screen {
  background-color: var(--background-color);
  color: var(--text-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  word-spacing: 3px;
}

.menu-screen .grid-container {
  position: relative;
  display: grid;
  grid-template-rows: 0.5fr 0.5fr 3fr 2fr 1fr 1fr 1fr;
  grid-template-columns: minmax(auto, 1fr);
  row-gap: 13px;
  justify-content: center;
  justify-items: center;
  place-items: center;
}

.player-vs-ai-bot-options {
  display: contents;
}

.menu-screen .header {
  grid-row: 1;
}

.menu-screen .exit-button {
  grid-row: 1;
  padding: 5px;
  padding-inline: 10px;
  position: relative;
  right: 40.14vw;
  font-family: var(--materials-text-font), Times, serif;
}

.menu-screen .header>.signs {
  display: flex;
  justify-content: center;
  font-size: 3rem;
  font-family: var(--text-font-cursive), Times, serif;
}

.mode-container,
.difficulty-container,
.ai-bot-sign-selection-container,
.rounds-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px;
  background-color: var(--button-panel-background-color);
  padding: 25px;
  width: 80vw;
  font-family: var(--text-font-squiggly), Times, serif;

  /* Styles for fade in effect */
  opacity: 0;
  max-height: 0;
  transition: opacity 0.9s ease-in-out, max-height 1.2s ease-in-out;
}

.player-selection-container {
  grid-row: 2;
  align-items: center;
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: repeat(2, minmax(auto, 1fr));
  background-color: var(--button-panel-background-color);
  padding: 25px;
  padding-top: 30px;
  padding-bottom: 30px;
  gap: 100px;
  width: 70vw;
}

.mode-container {
  grid-row: 3;
}

.mode-container .title,
.difficulty-container .title,
.ai-bot-sign-selection-container .title,
.rounds-container .title {
  font-size: 1.5rem;
  background: var(--sub-title-linear-gradient);
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
  padding: 5px;
  margin-right: -5px;
  border-radius: 5px;
  position: relative;
  z-index: 1;
}

.modes {
  display: grid;
  grid-template-columns: repeat(2, minmax(auto, 1fr));
  gap: 50px;

  /* Highlighted Text */
  background: linear-gradient(to right, var(--x-color), var(--o-color));
  background-clip: text;
  color: transparent;
}

.regular-container,
.trick-container {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 1rem;
}

p {
  text-align: center;
}

.difficulty-container {
  grid-row: 4;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.difficulties,
.round-selection-container {
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: repeat(3, minmax(auto, 1fr));
  gap: 20px;
}

.ai-bot-sign-selection-container {
  grid-row: 5;
}

.ai-bot-sign-selection-container>.buttons {
  margin-top: 20px;
  display: flex;
  gap: 20px;
}

.ai-bot-sign-selection-container .x-sign {
  font-family: var(--text-font-squiggly), Times, serif;
  padding-left: 4.5px;
}

.rounds-container {
  grid-row: 6;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.menu-screen .start-container {
  display: contents;
}

.menu-screen .start-game-button {
  padding-inline: 38px;
  width: 350px;
  justify-self: center;
  position: relative;
  padding: 11px 0px 11px 0px;
  margin-top: -50px;
}

.player-selection-container,
.mode-container,
.difficulty-container,
.ai-bot-sign-selection-container,
.rounds-container {
  -webkit-background-clip: text;
}

.menu-screen button:hover {
  background-color: var(--button-hover-color);
  transform: scale(1.2);
  transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.menu-screen button:active {
  transform: scale(0.9);
  font-size: 1.6rem;
}

.menu-screen button {
  background-color: var(--button-background-color);
  color: var(--text-color);
  font-family: var(--text-font-squiggly), Times, serif;
  padding: 10px;
  padding-inline: 17px;
  border-radius: 15px;
  border: 2px solid var(--button-background-color);
  box-shadow: 2px 2px 4px 0px black;
}

.menu-screen footer {
  position: absolute;
  bottom: 1vh;
  width: 100%;
  height: 2vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--text-color);
  font-size: 0.8rem;
  font-family: var(--text-font-squiggly), Times, serif;
}

@media (orientation: landscape) and (max-height: 500px) {
  .menu-screen .grid-container {
    min-height: 300vh;
    grid-template-rows: 0.1fr 1fr 1fr 1fr 1fr 1fr 0.1fr;
  }

  .menu-screen {
    margin-top: 10px;
  }
}

@media (max-width: 600px) {
  .menu-screen .start-game-button {
    padding-inline: 35px;
    width: 350px;
    justify-self: center;
    position: relative;
    padding: 11px 0px 11px 0px;
  }

  .menu-screen .grid-container {
    height: 130vh;
  }
}

